Updated post title

--- a/pages/articles/dither.mdx
+++ b/pages/articles/dither.mdx
@@ -11,7 +11,7 @@ import HoverNote from '../../components/HoverNote';
 
 export default ({ children }) => <PostLayout meta={meta}>{children}</PostLayout>;
 export const meta = {
-  title: 'A visual introduction to dithering'
+  title: 'Dithering: a visual introduction'
 };
 
 ## What is dithering?
