--- a/pages/articles/dither.mdx
+++ b/pages/articles/dither.mdx
@@ -42,9 +42,9 @@ This is the working principle of dithering: by mixing a few base colors in tiny 
 
 ## *Why* dithering?
 
-Modern displays and image formats can display some 16.7 *million* colors. That's a lot. That hasn't always been the case, though. Back in the early days of computers, many devices supported as few as 16 or even just *four* colors. Even in the late 1990s to early 2000s many people still had 256-color displays—hence the 216-color “web safe” palette. Many image formats—notably the widely used GIF—were limited to 256 colors as well.
+Modern displays and image formats can display some 16.7 *million* colors. That's a lot. This hasn't always been the case, though. Back in the early days of computers, most devices had monochrome screens with only a few brightness levels. Early color displays supported as few as 16 or even just *four* colors at a time. Even as late as the early 2000s there were still people using 256-color displays—hence the 216-color “web safe” palette—and some popular image formats were limited to a 256 color palette as well.
 
-In these low-color scenarios, dithering helps reduce color banding and effectively multiplies the number of colors we can display. Generally speaking, dithered images just look much better (click each image to view in detail):
+In these low-color scenarios, dithering helps reduce color banding and effectively increases the number of colors we can display. Generally speaking, dithered images just look much better (click each image to view in detail):
 
 <ImageGrid pixelated images={[
   {
