added automatic id generation for headings to enable fragment urls

--- a/pages/articles/dither.mdx
+++ b/pages/articles/dither.mdx
@@ -40,7 +40,7 @@ And the effect isn't limited to just two colors, either. In the example below, b
 
 This is the working principle of dithering: by mixing a few base colors in tiny patterns, we can trick our eyes into seeing the shades in between that we can't actually display.
 
-## *Why* dithering?
+## Why dithering?
 
 Modern displays and image formats can display some 16.7 *million* colors. That's a lot. This hasn't always been the case, though. Back in the early days of computers, most devices had monochrome screens with only a few brightness levels. Early color displays supported as few as 16 or even just *four* colors at a time. Even as late as the early 2000s there were still people using 256-color displays—hence the 216-color “web safe” palette—and some popular image formats were limited to a 256 color palette as well.
 
